--- a/web.css
+++ b/web.css
@@ -140,6 +140,7 @@ main h3{
     height:5vh;
     background-color:white;
     margin-bottom:2rem;
+    margin-left:2rem;
     animation:circles 5s ease-in-out infinite;
 }
 
@@ -148,6 +149,7 @@ main h3{
     height:5vh;
     background-color:white;
     margin-top:3rem;
+    margin-left:2rem;
     animation:circles 5s ease-in-out infinite;
     animation-delay: 2.5s;
 }
@@ -169,7 +171,7 @@ main h3{
  }
  header{
     background-image:url(img/2167.png);
-    background-size:cover;
+    background-size: cover;
  }
 }
 
@@ -179,6 +181,10 @@ main h3{
     header{
         background-image: url(img/2167.png);
         background-size:cover;
+     }
+
+     main h3{
+        font-size:1.5rem;
      }
 }
 
