--- a/web.css
+++ b/web.css
@@ -175,7 +175,7 @@ main h3{
  }
 }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width:700px) {
     
     
     header{
