--- a/web.css
+++ b/web.css
@@ -1,3 +1,5 @@
+/*global styling*/
+
 *{
     margin:0;
     padding:0;
@@ -13,6 +15,8 @@ html{
     --blue: #e8e8e8;
     --blueHover: #dfbdf7;
 }
+
+/*header styling*/
 
 header{
     height:100vh;
@@ -100,6 +104,8 @@ body::-webkit-scrollbar {
     background-color: rgb(255, 255, 255);    /* color of the scroll thumb */
   }
 
+/*main content styling*/
+
   main {
     height:100vh;
     background-color:#333;
@@ -146,6 +152,27 @@ main h3{
     animation-delay: 2.5s;
 }
 
+/*information section styling */
+
+#info{
+    background-image:linear-gradient(to bottom, #333, rgb(90, 90, 90));
+    position:absolute;
+    top:200vh;
+    z-index:2;
+    width:100%;
+    height:100vh;
+}
+
+.down_arrow .fa-solid{
+    font-size:12rem;
+    position:absolute;
+    bottom:7rem;
+    left:37%;
+    animation:lower 2s ease-in-out infinite;
+}
+
+/*media styling*/
+
 @media (orientation: portrait) {
  h3 span::after{
     content:'\A';
@@ -169,26 +196,10 @@ main h3{
         font-size:1.5rem;
      }
      main{
-        height:200vh;
+        height:100vh;
      }
 }
 
-
-@keyframes down {
-    0%{transform:translateY(-50px);}
-    100%{transform:translateY(80px);}
-    
-}
-@media (min-width:700px){
-   header h3{
-        font-size:4rem;
-    }
-   header h1{ font-size:6rem;}
-   main h3{
-    font-size:3.6em;
-    font-family: 'IBM Plex Serif', serif;
-}
-}
 @media screen and (min-width: 840px){
    header{
     background-image: url(img/2167.png);
@@ -251,9 +262,35 @@ main h3{
     }
 }
 
+/*animations styling*/
+
+@keyframes down {
+    0%{transform:translateY(-50px);}
+    100%{transform:translateY(80px);}
+    
+}
+@media (min-width:700px){
+   header h3{
+        font-size:4rem;
+    }
+   header h1{ font-size:6rem;}
+   main h3{
+    font-size:3.6em;
+    font-family: 'IBM Plex Serif', serif;
+}
+}
+
 @keyframes circles {
     0%{transform:translateX(0px); border-radius:0%; background-color:rgb(255, 255, 255);}
     10%{border-radius:10%;}
     50%{transform:translateX(800%); border-radius:60%; background-color:rgb(170, 255, 131);}
     100%{transform:translateX(0px); border-radius:0%; background-color:rgb(255, 255, 255);}
+}
+
+@keyframes lower {
+    0%{transform:scaleY(1)}
+    10%{transform:translateY(-50px);}
+    50%{transform: scaleY(1.3)}
+    80%{transform: scaleY(1.2)}
+    100%{transform:scaleY(1.2) scaleY(1)}
 }
