--- a/web.css
+++ b/web.css
@@ -116,6 +116,7 @@ body::-webkit-scrollbar {
     background-image:linear-gradient(to bottom, #222, #333);
     border-top-right-radius: 2%;
     border-top-left-radius: 2%;
+    scroll-behavior:smooth;
 }
 
 #content{
@@ -152,6 +153,26 @@ main h3{
     animation-delay: 2.5s;
 }
 
+ .press{
+    width:20vh;
+    height:12vh;
+    position:relative;
+    top:20vh;
+    left:33%;
+    border:2px double grey;
+    border-radius:20px;
+    background-color:#333;
+    color:white;
+    transition:all .2s ease-in-out;
+}
+
+.press:active{
+    background-color:rgb(208, 208, 208);
+    box-shadow: 0px 0px 93px -20px rgba(159,255,174,0.75);
+-webkit-box-shadow: 0px 0px 93px -20px rgba(159,255,174,0.75);
+-moz-box-shadow: 0px 0px 93px -20px rgba(159,255,174,0.75);
+}
+
 /*information section styling */
 
 #info{
@@ -169,6 +190,32 @@ main h3{
     bottom:7rem;
     left:37%;
     animation:lower 2s ease-in-out infinite;
+}
+.con{
+    position:relative;
+    top:20vh;
+    left:0;
+}
+
+#info .hel{
+    font-size:3.2rem;
+    text-align:center;
+    margin-top:1rem;
+    margin-bottom:1rem;
+    animation:up_down 8s linear infinite;
+}
+
+#info h3{
+    font-size:1.7rem;
+    text-align:justify;
+    margin-left:2rem;
+    margin-right:2rem;
+}
+
+#info h2{
+    font-size:2.6rem;
+    margin-top:2rem;
+    margin-left:2rem;
 }
 
 /*media styling*/
@@ -200,6 +247,51 @@ main h3{
      }
 }
 
+@media (max-width:320px){
+    header hgroup{
+    top:10%;
+    }
+    
+     header h1{
+     font-size:3.5rem;
+    }
+    
+     header h3{
+         font-size:2rem;
+     }
+     header hgroup {
+         transform:rotate(-15deg);
+     }
+     main h3{
+         font-size:1.5rem;
+         font-family: 'IBM Plex Serif', serif;
+     }
+ }
+
+@media (min-width:700px){
+    header h3{
+         font-size:4rem;
+     }
+    header h1{ font-size:6rem;}
+    main h3{
+     font-size:3.6em;
+     font-family: 'IBM Plex Serif', serif;
+ }
+ .press{
+     width:30vh;
+     height:20vh;
+     top:15vh;
+     left:30%;
+     cursor:pointer;
+     font-size:4rem;
+     transition:all 0.3s ease-in-out;
+ }
+ 
+ #arrow{
+     transform:scale(2.4);
+ }
+ }
+
 @media screen and (min-width: 840px){
    header{
     background-image: url(img/2167.png);
@@ -212,6 +304,8 @@ main h3{
         height:80px;
         border-radius:20%;
         font-size:5rem;
+        transform:scale(1);
+        left:45%;
         
     }
     header hgroup{
@@ -237,30 +331,26 @@ main h3{
         font-size:3rem;
         font-family: 'IBM Plex Serif', serif;
     }
+.press{
+    width:50vh;
+    height:30vh;
+    top:15vh;
+    left:35%;
+    cursor:pointer;
+    font-size:4rem;
+    transition:all 0.3s ease-in-out;
+}
+
+    .press:hover{
+        background-color:rgb(208, 208, 208);
+    box-shadow: 0px 0px 93px -20px rgba(159,255,174,0.75);
+-webkit-box-shadow: 0px 0px 93px -20px rgba(159,255,174,0.75);
+-moz-box-shadow: 0px 0px 93px -20px rgba(159,255,174,0.75);
+color:#333;
+    }
 
 }
 
-
-@media (max-width:320px){
-   header hgroup{
-   top:10%;
-   }
-   
-    header h1{
-    font-size:3.5rem;
-   }
-   
-    header h3{
-        font-size:2rem;
-    }
-    header hgroup {
-        transform:rotate(-15deg);
-    }
-    main h3{
-        font-size:1.5rem;
-        font-family: 'IBM Plex Serif', serif;
-    }
-}
 
 /*animations styling*/
 
@@ -268,16 +358,6 @@ main h3{
     0%{transform:translateY(-50px);}
     100%{transform:translateY(80px);}
     
-}
-@media (min-width:700px){
-   header h3{
-        font-size:4rem;
-    }
-   header h1{ font-size:6rem;}
-   main h3{
-    font-size:3.6em;
-    font-family: 'IBM Plex Serif', serif;
-}
 }
 
 @keyframes circles {
@@ -287,10 +367,8 @@ main h3{
     100%{transform:translateX(0px); border-radius:0%; background-color:rgb(255, 255, 255);}
 }
 
-@keyframes lower {
-    0%{transform:scaleY(1)}
-    10%{transform:translateY(-50px);}
-    50%{transform: scaleY(1.3)}
-    80%{transform: scaleY(1.2)}
-    100%{transform:scaleY(1.2) scaleY(1)}
+@keyframes up_down{
+    0%{transform: translateY(0);}
+    50%{transform: translateY(-1rem);}
+    100%{transform: translateY(0);}
 }
