--- a/web.css
+++ b/web.css
@@ -181,7 +181,7 @@ main h3{
     top:200vh;
     z-index:2;
     width:100%;
-    height:100vh;
+    height:110vh;
 }
 
 .down_arrow .fa-solid{
@@ -217,6 +217,35 @@ main h3{
     margin-top:2rem;
     margin-left:2rem;
 }
+
+#exp{
+    position:relative;
+    top:27vh; left:0;
+    width:20vh;
+    height:22vh;
+    background-color:rgba(116, 116, 116, 0.138);;
+    transition:all 0.5s linear;
+    border:1px solid #333;
+    transform:translateY(20px);
+}
+#exp:hover{
+    transform:translateY(-1.8rem);
+    background-color:#333;
+}
+
+#exp h2{
+    font-size:2rem;
+    position:relative;
+    top:20%;
+    left:-10%;
+    text-align:center;
+    
+}
+ a{
+    color:white;
+    text-decoration:none;
+}
+
 
 /*media styling*/
 
@@ -296,7 +325,7 @@ main h3{
  }
  
  #arrow{
-     transform:scale(2.4);
+     transform:scale(1.7);
  }
 
  #info .hel{
