--- a/under website/style.css
+++ b/under website/style.css
@@ -74,3 +74,21 @@ body{
         -webkit-box-shadow: 0px 0px 92px -25px rgba(0,0,0,0.25);
         -moz-box-shadow: 0px 0px 92px -25px rgba(0,0,0,0.25);}
 }
+
+@media (min-width: 768px) {
+    header h1{
+        font-size:7rem;
+    }
+
+    header h3{
+        font-size:4rem;
+        margin-left:4rem;
+        margin-right:4rem;
+        animation:none;
+        box-shadow:none;
+    }
+
+    header .fa-solid{
+        font-size:6rem;
+    }
+}
