--- a/web.css
+++ b/web.css
@@ -91,6 +91,77 @@ position:relative;
 transform:translateY(10px);
 }
 
+/*navbar styling*/
+header nav{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:10%;
+    z-index:5;
+    display:none;
+}
+.navbar{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+    background-color:#333;
+    color:white;
+    display:none;
+}
+
+.brand-title{
+    font-size:1.5rem;
+    margin: .5rem
+}
+
+.navbar-links ul{
+    margin:0;
+    padding:0;
+    display:flex;
+}
+
+.navbar-links li{
+    list-style: none;
+    margin-left:20px;
+    margin-right:10px;
+    font-size:3rem;
+    transition: all 0.14s linear;
+}
+
+.navbar-links li a{
+    text-decoration:none;
+    color:white;
+    padding:1rem;
+    display:block;
+    opacity:0.8;
+}
+
+.navbar-links li:hover{
+    opacity:1;
+    transform:scale(1.1);
+}
+
+.toggle-button{
+    position: absolute;
+    top: .75rem;
+    right:1rem;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width:30px;
+    height:21px;
+
+}
+
+.toggle-button .bar{
+height:3px;
+width:100%;
+background-color:white;
+border-radius: 10px;
+}
+
+/*scrollbar stylign*/
 
 body::-webkit-scrollbar {
     width: 4px;               /* width of the entire scrollbar */
@@ -306,6 +377,34 @@ main h3{
      }
  }
 
+ @media (max-width:600px){
+    .toggle-button{
+        display:flex;
+    }
+
+    .navbar-links{
+       display:none;
+       width:100%;
+    }
+
+    .navbar{
+        flex-direction:column;
+        align-items:flex-start;
+    }
+    .navbar-links ul{
+        flex-direction:column;
+        widtH:100vw;
+        background-color:#333;
+    }
+
+    .navbar-links li{
+        text-align:center;
+    }
+
+    .navbar-links:active{
+        display:flex;
+    }
+ }
 @media (min-width:700px){
     header h3{
          font-size:4rem;
@@ -355,6 +454,13 @@ main h3{
 }
  }
 
+ .navbar-links li{
+    font-size:20px;
+}
+
+.toggle-button{
+    display:none;
+}
 @media screen and (min-width: 840px){
    header{
     background-image: url(img/2167.png);
